<resources>
    <string name="app_name">CGPA Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youtube"><a href="https://youtube.com/channel/UCUc_n0k_CLtDwfMXUcltdAg">Youtube.com/TechCosIncorporated</a></string>
    <string name="insta"><a href="https://instagram.com/techcos_inc?igshid=YmMyMTA2M2Y=">@TechCos_Inc</a></string>
    <string name="mail"><a href="TechCosIncorporated@gmail.com">TechCosIncorporated@gmail.com</a></string>
    <string name="twitter"><a href="https://twitter.com/TechCos_Inc?t=A7_iKHILUwfoZmT7Vfoeiw&amp;s=08">@TechCos_Inc</a></string>

    <string name="ytlink"><a href="https://youtu.be/4jxZJnqYl3E">Check Out This Video</a></string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parenthesis">( )</string>
    <string name="divide">÷</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backspace"></string>

    <string name="display">Enter a Value</string>
</resources>