<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CalcsFragment">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:backgroundTint="#DD2C00"
                android:textSize="24sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/parenthesis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/parenthesis"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_height="70dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exponent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:layout_weight="1"
                android:text="@string/exponent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:textSize="24sp"
                android:layout_weight="1"
                android:backgroundTint="#0446FA"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="18sp"
                android:background="@drawable/circle"
                android:backgroundTint="#0446FA"
                android:layout_weight="1"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="6" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:backgroundTint="#0446FA"
                android:layout_weight="1"
                android:text="@string/sub" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:backgroundTint="#0446FA"
                android:layout_weight="1"
                android:text="@string/add" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/plusMinus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:text="@string/point" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:layout_weight="1"
                android:backgroundTint="#43A047"
                android:text="@string/equals" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp"
        android:autofillHints="false"
        android:inputType="none"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"
        android:textSize="24sp"
        android:layout_height="70dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/circle"
        app:srcCompat="@drawable/backspace"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="" />

</androidx.constraintlayout.widget.ConstraintLayout>