<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_10sdp"
    tools:context=".About"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="We TechCos Inc,"
        android:fontFamily="@font/spartan_bold"
        android:textColor="#000000"
        android:textSize="@dimen/_18sdp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="\n\t\t\t\t\t\t\t\tWe are StartUp Founded by Students Of Dept(CSE) 2020-24 Of Christ College Of Engg. &amp; Tech.\n\n\t\t\t\t\t\t\t\t We are Developing Softwares for Day-To-Day life Usages."
        android:fontFamily="@font/spartan_bold"
        android:textSize="@dimen/_13sdp"
        />
        <LinearLayout
            android:layout_marginTop="@dimen/_250sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/mail"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:src="@drawable/ic_mail_outline_black_24dp"
                    />
                <TextView
                    android:id="@+id/mailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/mail"
                    android:fontFamily="@font/spartan_bold"
                    android:textSize="@dimen/_13sdp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/yt"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/yt"
                    android:layout_margin="@dimen/_2sdp"
                    />
                <TextView
                    android:id="@+id/youtubeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/youtube"
                    android:fontFamily="@font/spartan_bold"
                    android:textSize="@dimen/_13sdp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:src="@drawable/twitter"
                    />
                <TextView
                    android:id="@+id/twitterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/twitter"
                    android:fontFamily="@font/spartan_bold"
                    android:textSize="@dimen/_13sdp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/insta"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:src="@drawable/insta"
                    />
                <TextView
                    android:id="@+id/instaText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/insta"
                    android:fontFamily="@font/spartan_bold"
                    android:textSize="@dimen/_13sdp"
                    />
            </LinearLayout>



        </LinearLayout>
</LinearLayout>